# SIC-FinalProject

ai/: ac_control_model.pkl  ac_control_train.csv  ai.ipynb  anomaly_detection_model.pkl  anomaly_train.csv
db/: docker-compose.yml
db-broker/: .gitignore  docker-compose.yml
firmware/sic_final_firmware/: sic_final_firmware.ino
firmware/sic_final_firmware_simple/: sic_final_firmware_simple.ino
service/: .env.example  main.py  pyproject.toml  test_connection.py
web/: .env.example  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/_components/: QueryProvider.tsx  Sidebar.tsx
web/app/api/airflow/: route.ts
web/app/api/airflow/[id]/: route.ts
web/app/api/components/[id]/: route.ts
web/app/api/control/component/[id]/: route.ts
web/app/api/control/emergency-stop/: route.ts
web/app/api/dashboard/stats/: route.ts
web/app/api/dashboard/trends/: route.ts
web/app/api/rooms/: route.ts
web/app/api/rooms/[id]/: route.ts
web/app/api/rooms/[id]/components/: route.ts
web/app/rooms/: page.tsx
web/app/rooms/[roomId]/: page.tsx
web/app/rooms/[roomId]/_components/: ComponentModal.tsx
web/app/rooms/_components/: AddRoomModal.tsx  ConnectionModal.tsx
web/lib/: prisma.ts
web/prisma/: schema.prisma
web/prisma/migrations/20260113071922_add_airflow_connections/: migration.sql
